fix: removed max width and increased row gap

--- a/sites/public/styles/blocks.scss
+++ b/sites/public/styles/blocks.scss
@@ -32,8 +32,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
   column-gap: 1rem;
+  row-gap: 2rem;
   .media-grid__cell {
-    margin-bottom: 1rem;
+    width: 100%;
     @screen md {
       width: calc(50% - 0.5rem);
     }
